<resources>
    <string name="app_name">Rick And Morty</string>

    <!-- ListFragment Strings -->
    <string name="title_characters">Personagens</string>
    <string name="detail_fragment"> Você escolheu {character}</string>

    <!-- FilterFragment Strings -->
    <string name="title_btn_reset">Reset</string>
    <string name="title_btn_apply">Apply</string>
    <string name="title_filter">Filter</string>
    <string name="title_status">Status</string>
    <string name="txt_chip_alive">Alive</string>
    <string name="txt_chip_dead">Dead</string>
    <string name="txt_chip_unknown">unknown</string>
    <string name="title_gender">Gender</string>
    <string name="txt_checkbox_female">Female</string>
    <string name="txt_checkbox_genderless">Genderless</string>
    <string name="txt_checkbox_male">Male</string>
    <string name="txt_checkbox_unknown">unknown</string>

    <!-- DetailFragment Strings -->
    <string name="title_episodes">Episodes</string>
    <string name="title_origin">Origin</string>
    <string name="title_location">Location</string>
    <string name="title_reset">Reset</string>
    <string name="character_text">Personagem</string>
    <string name="search_character">Procurar Personagem</string>
    <string name="more">Saiba Mais</string>
    <string name="number">4</string>
    <string name="filter_btn">Filtrar</string>
    <string name="search_btn">Buscando</string>


</resources>